- some arrangements in the implementation

--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jackalhan/Development/github/more_meaningful_representations/venv/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['5 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_8_epoch_1_mar_0.6_sf_0.9_0.9_0.9_0.9_0.9_0.9_0.9_0.9_wd_0.001_0.001_0.001_0.001_0.001_0.001_0.001_0.001_lr_0.001_dim_2048_2048_2048_2048_2048_2048_2048_2048_keep_1_1_1_1_1_1_1_1_seed_66_66_66_66_66_66_66_66_loss_v3/debug_dict.pkl']"
+       "['9 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_3_layers_1_epoch_1_mar_0.6_sf_0.1__lr_0.001_dim_2048_keep_0.5_seed_66_loss_v3/debug_dict.pkl']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,22 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_8_epoch_1_mar_0.6_sf_0.9_0.9_0.9_0.9_0.9_0.9_0.9_0.9_wd_0.001_0.001_0.001_0.001_0.001_0.001_0.001_0.001_lr_0.001_dim_2048_2048_2048_2048_2048_2048_2048_2048_keep_1_1_1_1_1_1_1_1_seed_66_66_66_66_66_66_66_66_loss_v3/debug_dict.pkl'"
+       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_3_layers_1_epoch_1_mar_0.6_sf_0.1__lr_0.001_dim_2048_keep_0.5_seed_66_loss_v3/debug_dict.pkl'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_indx =5\n",
+    "model_indx =9\n",
     "my_dict = load_from_pickle(os.path.join(base_data_path, \n",
     "                                        debug_files[model_indx]))\n",
     "num_of_epochs = my_dict['epochs']\n",
@@ -107,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -118,84 +110,84 @@
          "mode": "lines+markers",
          "name": "Top top_1",
          "type": "scatter",
-         "uid": "1e51ad22-ba9e-11e8-a9b3-989096cb06e5",
+         "uid": "40d3504e-bc0b-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.3372,
-          0.0022
+          0.3902,
+          0
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_2",
          "type": "scatter",
-         "uid": "1e51ad23-ba9e-11e8-a9b3-989096cb06e5",
+         "uid": "40d3504f-bc0b-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.4244,
-          0.0034
+          0.485,
+          0
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_5",
          "type": "scatter",
-         "uid": "1e51ad24-ba9e-11e8-a9b3-989096cb06e5",
+         "uid": "40d35050-bc0b-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.5334,
-          0.008
+          0.5966,
+          0.0004
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_10",
          "type": "scatter",
-         "uid": "1e51ad25-ba9e-11e8-a9b3-989096cb06e5",
+         "uid": "40d35051-bc0b-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.61,
-          0.013
+          0.671,
+          0.0006
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_20",
          "type": "scatter",
-         "uid": "1e51ad26-ba9e-11e8-a9b3-989096cb06e5",
+         "uid": "40d35052-bc0b-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.6806,
-          0.021
+          0.7456,
+          0.0014
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_50",
          "type": "scatter",
-         "uid": "1e51ad27-ba9e-11e8-a9b3-989096cb06e5",
+         "uid": "40d35053-bc0b-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.7612,
-          0.037
+          0.8212,
+          0.0026
          ]
         }
        ],
@@ -210,23 +202,23 @@
        }
       },
       "text/html": [
-       "<div id=\"024e94bc-e691-4a17-b4fc-97ea41b50421\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"0a42ec06-4397-4f92-bd0c-ff96294cb01d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '024e94bc-e691-4a17-b4fc-97ea41b50421',\n",
-       "            [{\"x\": [0.0, 1.0], \"uid\": \"1e51ad22-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.3372, 0.0022], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad23-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.4244, 0.0034], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad24-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.5334, 0.008], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad25-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.61, 0.013], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad26-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.6806, 0.021], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad27-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.7612, 0.037], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
+       "            '0a42ec06-4397-4f92-bd0c-ff96294cb01d',\n",
+       "            [{\"x\": [0.0, 1.0], \"uid\": \"40d3504e-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.3902, 0.0], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d3504f-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.485, 0.0], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35050-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.5966, 0.0004], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35051-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.671, 0.0006], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35052-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.7456, 0.0014], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35053-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.8212, 0.0026], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
        "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\"},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('024e94bc-e691-4a17-b4fc-97ea41b50421',{});}).then(function(){Plotly.animate('024e94bc-e691-4a17-b4fc-97ea41b50421');})\n",
+       "        ).then(function () {return Plotly.addFrames('0a42ec06-4397-4f92-bd0c-ff96294cb01d',{});}).then(function(){Plotly.animate('0a42ec06-4397-4f92-bd0c-ff96294cb01d');})\n",
        "        });</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"024e94bc-e691-4a17-b4fc-97ea41b50421\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"0a42ec06-4397-4f92-bd0c-ff96294cb01d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '024e94bc-e691-4a17-b4fc-97ea41b50421',\n",
-       "            [{\"x\": [0.0, 1.0], \"uid\": \"1e51ad22-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.3372, 0.0022], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad23-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.4244, 0.0034], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad24-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.5334, 0.008], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad25-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.61, 0.013], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad26-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.6806, 0.021], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad27-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.7612, 0.037], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
+       "            '0a42ec06-4397-4f92-bd0c-ff96294cb01d',\n",
+       "            [{\"x\": [0.0, 1.0], \"uid\": \"40d3504e-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.3902, 0.0], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d3504f-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.485, 0.0], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35050-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.5966, 0.0004], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35051-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.671, 0.0006], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35052-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.7456, 0.0014], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35053-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.8212, 0.0026], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
        "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\"},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('024e94bc-e691-4a17-b4fc-97ea41b50421',{});}).then(function(){Plotly.animate('024e94bc-e691-4a17-b4fc-97ea41b50421');})\n",
+       "        ).then(function () {return Plotly.addFrames('0a42ec06-4397-4f92-bd0c-ff96294cb01d',{});}).then(function(){Plotly.animate('0a42ec06-4397-4f92-bd0c-ff96294cb01d');})\n",
        "        });</script>"
       ]
      },
