- triplet loss is improved by taking the pure positive

--- a/squad/Vocabulary_And_Embedding_Layer_Preperation_For_ConvNet.ipynb
+++ b/squad/Vocabulary_And_Embedding_Layer_Preperation_For_ConvNet.ipynb
@@ -1316,6 +1316,398 @@
    "source": [
     "sess.run(true_targets)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Check that i and j are distinct\n",
+    "indices_equal = tf.cast(tf.eye(tf.shape(labels)[0]), tf.bool)\n",
+    "indices_not_equal = tf.logical_not(indices_equal)\n",
+    "# Check if labels[i] == labels[j]\n",
+    "# Uses broadcasting where the 1st argument has shape (1, batch_size) and the 2nd (batch_size, 1)\n",
+    "labels_equal = tf.equal(tf.expand_dims(labels, 0), tf.expand_dims(labels, 1))\n",
+    "# Combine the two masks\n",
+    "mask = tf.logical_and(indices_not_equal, labels_equal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 10, 20, 30, 40, 30])"
+      ]
+     },
+     "execution_count": 280,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indices_equal = tf.cast(tf.eye(tf.shape(labels)[0]), tf.bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True, False, False, False, False, False],\n",
+       "       [False,  True, False, False, False, False],\n",
+       "       [False, False,  True, False, False, False],\n",
+       "       [False, False, False,  True, False, False],\n",
+       "       [False, False, False, False,  True, False],\n",
+       "       [False, False, False, False, False,  True]])"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(indices_equal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indices_not_equal = tf.logical_not(indices_equal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False,  True,  True,  True,  True,  True],\n",
+       "       [ True, False,  True,  True,  True,  True],\n",
+       "       [ True,  True, False,  True,  True,  True],\n",
+       "       [ True,  True,  True, False,  True,  True],\n",
+       "       [ True,  True,  True,  True, False,  True],\n",
+       "       [ True,  True,  True,  True,  True, False]])"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(indices_not_equal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_equal = tf.equal(tf.expand_dims(labels, 0), tf.expand_dims(labels, 1))\n",
+    "# Combine the two masks\n",
+    "mask = tf.logical_and(indices_equal, labels_equal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True, False, False, False, False, False],\n",
+       "       [False,  True, False, False, False, False],\n",
+       "       [False, False,  True, False, False, False],\n",
+       "       [False, False, False,  True, False, False],\n",
+       "       [False, False, False, False,  True, False],\n",
+       "       [False, False, False, False, False,  True]])"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_anchor_positive = tf.to_float(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(mask_anchor_positive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anchor_positive_dist = tf.multiply(mask_anchor_positive, pairwise_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.2, 0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0.2, 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0.1, 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0.5, 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0.5, 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. , 0.5]], dtype=float32)"
+      ]
+     },
+     "execution_count": 292,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(anchor_positive_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_dist = tf.reduce_max(anchor_positive_dist, axis=1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.2],\n",
+       "       [0.2],\n",
+       "       [0.1],\n",
+       "       [0.5],\n",
+       "       [0.5],\n",
+       "       [0.5]], dtype=float32)"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(positive_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_anchor_negative = _get_anchor_negative_triplet_mask(labels)\n",
+    "mask_anchor_negative = tf.to_float(mask_anchor_negative)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.2, 0.2, 0.4, 3.5, 2.5, 3.5],\n",
+       "       [0.2, 0.2, 0.4, 3.5, 2.5, 3.5],\n",
+       "       [0.3, 0.3, 0.1, 3. , 2. , 3. ],\n",
+       "       [2.8, 2.8, 2.6, 0.5, 0.5, 0.5],\n",
+       "       [1.8, 1.8, 1.6, 1.5, 0.5, 1.5],\n",
+       "       [2.8, 2.8, 2.6, 0.5, 0.5, 0.5]], dtype=float32)"
+      ]
+     },
+     "execution_count": 297,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(pairwise_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 10, 20, 30, 40, 30])"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 1., 1., 1., 1.],\n",
+       "       [0., 0., 1., 1., 1., 1.],\n",
+       "       [1., 1., 0., 1., 1., 1.],\n",
+       "       [1., 1., 1., 0., 1., 0.],\n",
+       "       [1., 1., 1., 1., 0., 1.],\n",
+       "       [1., 1., 1., 0., 1., 0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(mask_anchor_negative)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anchor_negative_dist = tf.multiply(mask_anchor_negative, pairwise_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 0. , 0.4, 3.5, 2.5, 3.5],\n",
+       "       [0. , 0. , 0.4, 3.5, 2.5, 3.5],\n",
+       "       [0.3, 0.3, 0. , 3. , 2. , 3. ],\n",
+       "       [2.8, 2.8, 2.6, 0. , 0.5, 0. ],\n",
+       "       [1.8, 1.8, 1.6, 1.5, 0. , 1.5],\n",
+       "       [2.8, 2.8, 2.6, 0. , 0.5, 0. ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 304,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(anchor_negative_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_anchor_negative_dist = tf.reduce_max(pairwise_dist, axis=1, keepdims=True)\n",
+    "anchor_negative_dist = pairwise_dist + max_anchor_negative_dist * (1.0 - mask_anchor_negative)\n",
+    "hardest_negative_dist = tf.reduce_min(anchor_negative_dist, axis=1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.4],\n",
+       "       [0.4],\n",
+       "       [0.3],\n",
+       "       [0.5],\n",
+       "       [1.5],\n",
+       "       [0.5]], dtype=float32)"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(hardest_negative_dist)"
+   ]
   }
  ],
  "metadata": {
