--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['9 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_3_layers_1_epoch_1_mar_0.6_sf_0.1__lr_0.001_dim_2048_keep_0.5_seed_66_loss_v3/debug_dict.pkl']"
+       "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_1_1_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,22 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_3_layers_1_epoch_1_mar_0.6_sf_0.1__lr_0.001_dim_2048_keep_0.5_seed_66_loss_v3/debug_dict.pkl'"
+       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_1_1_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_indx =9\n",
+    "model_indx =1\n",
     "my_dict = load_from_pickle(os.path.join(base_data_path, \n",
     "                                        debug_files[model_indx]))\n",
     "num_of_epochs = my_dict['epochs']\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -110,84 +110,84 @@
          "mode": "lines+markers",
          "name": "Top top_1",
          "type": "scatter",
-         "uid": "40d3504e-bc0b-11e8-a9b3-989096cb06e5",
+         "uid": "412ab7e4-c219-11e8-8071-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.3902,
-          0
+          0.0674,
+          0.1234
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_2",
          "type": "scatter",
-         "uid": "40d3504f-bc0b-11e8-a9b3-989096cb06e5",
+         "uid": "412ab7e5-c219-11e8-8071-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.485,
-          0
+          0.1182,
+          0.2086
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_5",
          "type": "scatter",
-         "uid": "40d35050-bc0b-11e8-a9b3-989096cb06e5",
+         "uid": "412ab7e6-c219-11e8-8071-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.5966,
-          0.0004
+          0.1862,
+          0.3566
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_10",
          "type": "scatter",
-         "uid": "40d35051-bc0b-11e8-a9b3-989096cb06e5",
+         "uid": "412ab7e7-c219-11e8-8071-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.671,
-          0.0006
+          0.25,
+          0.4584
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_20",
          "type": "scatter",
-         "uid": "40d35052-bc0b-11e8-a9b3-989096cb06e5",
+         "uid": "412ab7e8-c219-11e8-8071-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.7456,
-          0.0014
+          0.3188,
+          0.5576
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_50",
          "type": "scatter",
-         "uid": "40d35053-bc0b-11e8-a9b3-989096cb06e5",
+         "uid": "412ab7e9-c219-11e8-8071-989096cb06e5",
          "x": [
           0,
           1
          ],
          "y": [
-          0.8212,
-          0.0026
+          0.4152,
+          0.6696
          ]
         }
        ],
@@ -202,23 +202,23 @@
        }
       },
       "text/html": [
-       "<div id=\"0a42ec06-4397-4f92-bd0c-ff96294cb01d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"2537758d-6901-4433-843a-aa4439d9b2e3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '0a42ec06-4397-4f92-bd0c-ff96294cb01d',\n",
-       "            [{\"x\": [0.0, 1.0], \"uid\": \"40d3504e-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.3902, 0.0], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d3504f-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.485, 0.0], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35050-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.5966, 0.0004], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35051-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.671, 0.0006], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35052-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.7456, 0.0014], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35053-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.8212, 0.0026], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
-       "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\"},\n",
+       "            '2537758d-6901-4433-843a-aa4439d9b2e3',\n",
+       "            [{\"type\": \"scatter\", \"uid\": \"412ab7e4-c219-11e8-8071-989096cb06e5\", \"y\": [0.0674, 0.1234], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_1\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e5-c219-11e8-8071-989096cb06e5\", \"y\": [0.1182, 0.2086], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_2\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e6-c219-11e8-8071-989096cb06e5\", \"y\": [0.1862, 0.3566], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_5\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e7-c219-11e8-8071-989096cb06e5\", \"y\": [0.25, 0.4584], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_10\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e8-c219-11e8-8071-989096cb06e5\", \"y\": [0.3188, 0.5576], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_20\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e9-c219-11e8-8071-989096cb06e5\", \"y\": [0.4152, 0.6696], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_50\"}],\n",
+       "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('0a42ec06-4397-4f92-bd0c-ff96294cb01d',{});}).then(function(){Plotly.animate('0a42ec06-4397-4f92-bd0c-ff96294cb01d');})\n",
+       "        ).then(function () {return Plotly.addFrames('2537758d-6901-4433-843a-aa4439d9b2e3',{});}).then(function(){Plotly.animate('2537758d-6901-4433-843a-aa4439d9b2e3');})\n",
        "        });</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"0a42ec06-4397-4f92-bd0c-ff96294cb01d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"2537758d-6901-4433-843a-aa4439d9b2e3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '0a42ec06-4397-4f92-bd0c-ff96294cb01d',\n",
-       "            [{\"x\": [0.0, 1.0], \"uid\": \"40d3504e-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.3902, 0.0], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d3504f-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.485, 0.0], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35050-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.5966, 0.0004], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35051-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.671, 0.0006], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35052-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.7456, 0.0014], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0], \"uid\": \"40d35053-bc0b-11e8-a9b3-989096cb06e5\", \"y\": [0.8212, 0.0026], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
-       "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\"},\n",
+       "            '2537758d-6901-4433-843a-aa4439d9b2e3',\n",
+       "            [{\"type\": \"scatter\", \"uid\": \"412ab7e4-c219-11e8-8071-989096cb06e5\", \"y\": [0.0674, 0.1234], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_1\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e5-c219-11e8-8071-989096cb06e5\", \"y\": [0.1182, 0.2086], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_2\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e6-c219-11e8-8071-989096cb06e5\", \"y\": [0.1862, 0.3566], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_5\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e7-c219-11e8-8071-989096cb06e5\", \"y\": [0.25, 0.4584], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_10\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e8-c219-11e8-8071-989096cb06e5\", \"y\": [0.3188, 0.5576], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_20\"}, {\"type\": \"scatter\", \"uid\": \"412ab7e9-c219-11e8-8071-989096cb06e5\", \"y\": [0.4152, 0.6696], \"x\": [0.0, 1.0], \"mode\": \"lines+markers\", \"name\": \"Top top_50\"}],\n",
+       "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('0a42ec06-4397-4f92-bd0c-ff96294cb01d',{});}).then(function(){Plotly.animate('0a42ec06-4397-4f92-bd0c-ff96294cb01d');})\n",
+       "        ).then(function () {return Plotly.addFrames('2537758d-6901-4433-843a-aa4439d9b2e3',{});}).then(function(){Plotly.animate('2537758d-6901-4433-843a-aa4439d9b2e3');})\n",
        "        });</script>"
       ]
      },
@@ -267,19 +267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2    0.566667\n",
-       "0    0.566633\n",
-       "1    0.566500\n",
+       "1    0.395700\n",
+       "0    0.225967\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -327,32 +326,22 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.0908</td>\n",
-       "      <td>0.1530</td>\n",
-       "      <td>0.2420</td>\n",
-       "      <td>0.3130</td>\n",
-       "      <td>0.3828</td>\n",
-       "      <td>0.4760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0906</td>\n",
-       "      <td>0.1526</td>\n",
-       "      <td>0.2408</td>\n",
-       "      <td>0.3128</td>\n",
-       "      <td>0.3822</td>\n",
-       "      <td>0.4782</td>\n",
+       "      <td>0.1234</td>\n",
+       "      <td>0.2086</td>\n",
+       "      <td>0.3566</td>\n",
+       "      <td>0.4584</td>\n",
+       "      <td>0.5576</td>\n",
+       "      <td>0.6696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.0906</td>\n",
-       "      <td>0.1526</td>\n",
-       "      <td>0.2408</td>\n",
-       "      <td>0.3128</td>\n",
-       "      <td>0.3820</td>\n",
-       "      <td>0.4778</td>\n",
+       "      <td>0.0674</td>\n",
+       "      <td>0.1182</td>\n",
+       "      <td>0.1862</td>\n",
+       "      <td>0.2500</td>\n",
+       "      <td>0.3188</td>\n",
+       "      <td>0.4152</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -360,12 +349,11 @@
       ],
       "text/plain": [
        "   epoch   top_1   top_2   top_5  top_10  top_20  top_50\n",
-       "1      1  0.0908  0.1530  0.2420  0.3130  0.3828  0.4760\n",
-       "2      2  0.0906  0.1526  0.2408  0.3128  0.3822  0.4782\n",
-       "0      0  0.0906  0.1526  0.2408  0.3128  0.3820  0.4778"
+       "1      1  0.1234  0.2086  0.3566  0.4584  0.5576  0.6696\n",
+       "0      0  0.0674  0.1182  0.1862  0.2500  0.3188  0.4152"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
